# monitoring-test-task

src/: main.py  pyproject.toml
src/api/: __init__.py  metrics.py
src/core/: config.py
src/migrations/: env.py
src/migrations/versions/: e46dc3f1cd7b_init.py
src/models/: __init__.py  metrics.py
src/schemas/: aggregated_metrics.py
src/services/: metrics.py
